--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "dependencies": {
     "@tweenjs/tween.js": "^25.0.0",
     "es-module-shims": "^1.6.3",
-    "three": "^0.180.0"
-  },
-  "devDependencies": {
+    "three": "^0.180.0",
     "vite": "^6.3.6"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
